fix swagger doc
